--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=youtube
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/youtube
+spring.datasource.username=root
+spring.datasource.password=qwer1234
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
